Fixed some bugs found with PMD